# marmo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  package.json  spine.ts  tsconfig.json
.github/workflows/: core.yml  desktop.yml  sdk.yml  telegram.yml
base-sdk/: README.md  package.json  tsconfig.json
base-sdk/src/: account.ts  index.ts  shard.ts  sign.ts
contract/: hardhat.config.ts  package.json  tsconfig.json
contract/scripts/: deploy.ts
contract/src/: MarmoAccount.sol  MarmoAccountFactory.sol
contract/test/: MarmoAccount.test.ts
db/migrations/: 001_initial.sql  002_drop_spend_limits.sql  003_stealth_meta.sql  004_totp.sql  005_vault_recovery.sql  006_contract_address.sql
desktop/: index.html  package.json  tsconfig.json
desktop/src/: core.ts  main.ts  styles.css  wallet.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
packaging/arch/: PKGBUILD  marmo.desktop
packaging/flatpak/: xyz.marmo.Desktop.desktop  xyz.marmo.Desktop.yml
src/: chain.ts  crypto.ts  send.ts  server.ts  stealth.ts  store.ts  swap.ts  tokens.ts  totp.ts
src/db/: index.ts  migrate.ts
sui-sdk/: README.md  package.json  tsconfig.json
sui-sdk/examples/: two-of-three.ts
sui-sdk/src/: index.ts  network.ts  shard.ts  transaction.ts  wallet.ts
telegram/: .gitignore  index.html  package.json  wrangler.jsonc
telegram/src/: App.tsx  core.ts  main.tsx  styles.css  wallet.ts
