[package]
name = "marmo-desktop"
version = "0.3.0"
description = "Marmo desktop wallet"
authors = ["Marmo"]
edition = "2021"

[lib]
name = "marmo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
